--- a/altera_project/aquisition.qsf
+++ b/altera_project/aquisition.qsf
@@ -42,9 +42,10 @@ set_global_assignment -name TOP_LEVEL_ENTITY aquisition
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 10.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:46:25  FEBRUARY 26, 2016"
 set_global_assignment -name LAST_QUARTUS_VERSION 10.1
-set_global_assignment -name VERILOG_FILE ../modules/fifo.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VERILOG_FILE ../modules/spi.v
+set_global_assignment -name VERILOG_FILE ../modules/spi_slave.v
+set_global_assignment -name VERILOG_FILE ../modules/fifo.v
+set_global_assignment -name VERILOG_FILE ../modules/spi_master.v
